# economic_indicators

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  FRED_Requests.sqlite  Makefile  pyproject.toml  requirements.txt
.streamlit/: pages.toml
.trunk/: trunk.yaml
app/: BLS_series_mapping.json  __init__.py  main.py  utils.py
app/contents/: __init__.py  debt.py  home.py  labor.py
app/css/: stylesheet.css
app/pages/: 01_core_report.py  01_monthly_report.py  02_core_goods_report.py  02_labor.py  03_debt.py  _home.py
